Elaboración de vistas

--- a/app/src/main/res/layout/pack_item.xml
+++ b/app/src/main/res/layout/pack_item.xml
@@ -35,7 +35,7 @@
                 app:layout_constraintTop_toTopOf="parent"/>
 
             <TextView
-                android:id="@+id/engine_text_view"
+                android:id="@+id/price_text"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="@dimen/default_gap"
