--- a/app/src/main/res/layout/fragment_package.xml
+++ b/app/src/main/res/layout/fragment_package.xml
@@ -33,18 +33,24 @@
         android:layout_marginTop="@dimen/default_gap"
         android:layout_marginEnd="@dimen/default_gap"
         android:text="@={viewmodel.name}"
+        android:textAlignment="center"
+        android:textColor="@color/black"
+        android:textSize="@dimen/normal_text_size"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
     <TextView
         android:id="@+id/show_price_textview"
+        android:textAlignment="center"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/default_gap"
         android:layout_marginTop="@dimen/default_gap"
         android:layout_marginEnd="@dimen/default_gap"
         android:text="@={viewmodel.precio}"
+        android:textSize="@dimen/normal_text_size"
+        android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/show_name_textview" />
