--- a/app/src/main/res/layout/fragment_packs.xml
+++ b/app/src/main/res/layout/fragment_packs.xml
@@ -33,6 +33,7 @@
             android:layout_marginEnd="@dimen/default_gap"
             android:layout_marginBottom="@dimen/default_gap"
             android:clickable="true"
+            android:backgroundTint="@color/secondary"
             android:src="@android:drawable/ic_menu_add"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
