--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,4 +3,5 @@
     <dimen name="default_gap">16dp</dimen>
     <dimen name="tittle_size">32sp</dimen>
     <dimen name="default_radious">15dp</dimen>
+    <dimen name="normal_text_size">20sp</dimen>
 </resources>
